# fastcsv

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  vcpkg.json
projects/: CMakeLists.txt
projects/fastcsv/: CMakeLists.txt
projects/fastcsv/src/: fastcsv.cpp  fastcsv.hpp
projects/fastcsv/src/fastcsv/: fastcsv.hpp
projects/fastcsv_tests/: CMakeLists.txt
projects/fastcsv_tests/data/: all-primatives.csv  embeded-struct.csv  headers.csv  no-headers.csv
projects/fastcsv_tests/src/: adapter_tests.cpp  all_primatives_tests.cpp  array_tests.cpp  bool_tests.cpp  csv_parser_tests.cpp  embeded_struct_tests.cpp  fastcsv_tests.cpp  headers_tests.cpp  optional_tests.cpp  simple_tests.cpp  string_tests.cpp  string_view_stream_tests.cpp  traits_tests.cpp  tuple_tests.cpp  variadic_columns_tests.cpp  w_csv_parser_tests.cpp
projects/fastcsv_tests/src/fastcsv/: adapter_tests.cpp  all_primatives_tests.cpp  array_tests.cpp  bool_tests.cpp  csv_parser_tests.cpp  embeded_struct_tests.cpp  headers_tests.cpp  locator.hpp  optional_tests.cpp  simple_tests.cpp  string_tests.cpp  traits_tests.cpp  tuple_tests.cpp  variadic_columns_tests.cpp  w_csv_parser_tests.cpp
projects/fastcsv_tests/templates/: locator.cpp.in
